--- a/cities.html
+++ b/cities.html
@@ -27,7 +27,8 @@
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
-    <li>Vancouver(675,218)</li>
+    <li>Vancouver(2,632,000)</li>
+    <li>Toronto  (6,313,000)</li>
   </ol>
 
 </body>
