add city to end of ordered list

--- a/cities.html
+++ b/cities.html
@@ -30,6 +30,7 @@
     <li>Vancouver(2,632,000)</li>
     <li>Toronto  (6,313,000)</li>
     <li>Atlantis (0)</li>
+    <li>Bobby's Sock Town (25 socks)</li>
   </ol>
 
 </body>
