--- a/cities.html
+++ b/cities.html
@@ -22,6 +22,7 @@
   <hr/>
 
   <ol>
+    <li>Powell River (0)</li>
     <li>London --best guess (9,000,000)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
