add city at the end of ordered list

--- a/cities.html
+++ b/cities.html
@@ -32,6 +32,7 @@
     <li>Toronto  (6,313,000)</li>
     <li>Atlantis (0)</li>
     <li>Bobby's Sock Town (25 socks)</li>
+    <li>Edwardo all-inclusive-avocados (10 avocados)</li>
   </ol>
 
 </body>
